# outlook-cli

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
src/: auth.rs  calendar.rs  config.rs  mail.rs  main.rs  oauth.rs  output.rs  owa.rs  session.rs  timezone.rs  unattended.rs
tests/: cli.rs
