[package]
name = "outlook-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Unofficial CLI for Outlook Web calendar and mail via private OWA APIs"
repository = "https://github.com/adyavanapalli/outlook-cli"
license = "MIT"
keywords = ["outlook", "calendar", "email", "cli", "microsoft-365"]
categories = ["command-line-utilities"]
publish = false

[[bin]]
name = "outlook"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
fs4 = "1.1"
iana-time-zone = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "rustls-tls"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
totp-rs = { version = "5.7", features = ["otpauth", "zeroize"] }
tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
wait-timeout = "0.2"
windows-timezones = { version = "0.5", features = ["chrono-tz-0_10"] }
zeroize = "1"


[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
